--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	  	<br>
 		Base in Washington DC
 		<br>
-		Morgan State University, 2021
+		Morgan State University, 
 		<br/></p>
 
 	  	<br>  
@@ -79,22 +79,22 @@
   		</div>
   	</div>
 
-  		<!-- Project Title --->
+  		<!-- Together --->
 	<div class="container">
 
 		<!-- Black bar divider --->
 		<br/><hr color ="black" size="1px">	
 
  		 <div class="descriptions">  
-      		<h1> Project Title  </h1>
-		    <p> ↳Type of project, YEAR</p>
+      		<h1> Together  </h1>
+		    <p> ↳Mockup, 2021R</p>
 		    <!-- (Art Direction, Graphic Design, Product Design, Year) -->
-		    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+		    <p> Together.</p> 
          </div>
 
 		<div class="scrollable-div">
 			 <!-- To add project file between the "img/[Upload images here].jpg" -->
-			<img src="img/Al_Majles.gif">
+			<img src="img/ together -5 (1).jpg">
 	  		<img src="img/">
 	  		<img src="img/">
 	  		<img src="img/">
