--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
 
 		<div class="scrollable-div">
 			 <!-- To add project file between the "img/[Upload images here].jpg" -->
-			<img src="img/ together -5 (1).jpg">
-	  		<img src="img/">
-	  		<img src="img/">
-	  		<img src="img/">
+			<img src="img/draft_together.jpg">
+	  		<img src="img/draft_together2.jpg">
+	  		<img src="img/draft_together3.jpg">
   		</div>
   	</div>
 
